[package]
name = "sysanalyzer"
version = "1.0.0"
edition = "2024"
description = "Simple api to get pc specs"
homepage = "https://github.com/0xQueen/sysanalyzer"
repository = "https://github.com/0xQueen/sysanalyzer"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
]
keywords = [
    "specs"
]
licence = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_info = "3"
sysinfo = "0.26.7"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 1
